<?xml version="1.0" encoding="utf-8"?>
<resources>
	

    <string name="app_name">Penelope</string>
    <string name="OnAirTrue">On Air</string>
    <string name="OnAirFalse">Standby</string>
    <string name="record_button">Record</string>
	<string name="devices">Devices</string>
	<string name="input_device">Input Device</string> 
	<string name="output_device">Output Device</string>
	<string name="visualizations">Visualizations</string>
	<string name="particle_diffusion">Type of Particles</string>
	<string name="addons">Add-ons</string>
	<string name="report_problem">Report a problem</string>
	<string name="shapes">Shapes</string>
	<string name="open_account">Open Account</string>
	<string name="options">Settings</string>
	<string name="tutorial">Tutorial</string>
	<string name="about">About</string>
	<string name="option_record">Record Mode</string>
	<string name="option_help">Help</string>
	<string name="blank"></string>
	<string name="performance_options_category">Performance Options</string>
	<string name="sound_category">Audio</string>
	<string name="invert_phase">Invert Phase</string>
	<string name="visualization">Visualization</string>
	<string name="accelerometer">Accelerometer</string>
	<string name="output_audio">Output Audio</string>
	<string name="touch_screen">Touch Anywhere</string>
	<string name="go_onair">Go OnAir</string>
	
	<string-array name="input_devices_entries">
	    <item name="input_default">System Default(Internal Mic)</item>
	    <item name="inUSB_default">USB Input Device</item>
	</string-array>
	<string-array name="input_devices_keys">
	    <item name="input_default">System Default(Internal Mic)</item>
	    <item name="inUSB_default">USB Input Device</item>
	</string-array>
	<string name="input_default">System Default(Internal Mic)</string>
	<string name="inUSB_default">USB Input Device</string>
	
	<string-array name="output_devices_entries">
	    <item name="output_default">System Default(Playback Speaker)</item>
	    <item name="outUSB_default">USB Output Device</item>
	</string-array>
		<string-array name="output_devices_keys">
	    <item name="output_default">System Default(Playback Speaker)</item>
	    <item name="outUSB_default">USB Output Device</item>
	</string-array>
	<string name="output_default">System Default(Playback Speaker)</string>
	<string name="outUSB_default">USB Output Device</string>	
	
	
	<string name="dialog_penelope_full_messsage_usb">Our apologies, USB Audio IO is only supported in the full version at this time.</string>
	<string name="dialog_penelope_full_messsage_record">Our apologies, Recording is supported for Android v4.3+ devices, but it is still in Beta.</string>
	
	<string name="dialog_button_next_time">Next Time</string>
	<string name="dialog_button_more_info">More Info</string>
	
	
	<string name="dialog_restart_simulation">You must restart simulation for this change to take effect.</string>
	<string name="dialog_button_ok">OK</string> 
	
	<string name="dialog_welcome_to_penelope">Welcome to Penelope. \n\nEnjoy!</string>
	<string name="dialog_button_enjoy">Enjoy!</string>
	<string name="enable_reverb">Plate Reverb</string>
	<string name="inver_audio_summary">Reverse phase of output audio. May help reduce feedback.</string> 
	
	<string name="number_of_particles">Number of Particles</string>
	<string name="number_of_particles_summary">How many particles included in simulation</string>
	<string name="number_of_particles_dialog">Number of particles.</string>
	<string name="number_of_particles_text">particles</string>
	
	<string name="wet_dry_ratio">Ratio Wet:Dry</string>
	<string name="wet_dry_ratio_summary">Ratio of wet to dry.</string>
	<string name="wet_dry_ratio_dialog">Ratio of wet (processed sound) to dry (straight pass thru).</string>
	<string name="wet_dry_ratio_text">% Wet</string>
	
	<string name="buff_size_int">Audio Buffer Size</string>
	<string name="buff_size_int_summary">Size of audio buffer, increase to clean up audio</string>
	<string name="buff_size_int_dialog">Size of audio buffer, increase to clean up audio, decrease to reduce delay. Target for Samsung S3 is 2.</string>
	<string name="buff_size_int_text">Audio Buffer Size</string>
	
	<!--  From Here on out translations need to be added -->
	<string name="dialog_rate_penelope">Enjoying Penelope? \n\nPlease take the time to give Penelope a FIVE Star Rating. It is Very important to us. \n\nThank You!</string>
	<string name="dialog_purchase1">Thank You kindly for your puchase of </string>
	<string name="dialog_purchase2">\n\nRest Assured Google Play will remmeber this purchase, should you get a new phone.\n\nEnjoy!</string>
	<string name="dialog_purchase_fail">ERROR while purchasing!\n\nWe are sorry, but the purchase was not successful.</string>
	<string name="option_special_effects">Special Effects</string>
	<string name="special_effects">Special Effects</string>
	<string name="back">Back</string>
	<string name="enable_pitch_correct">Penelope Pitch Correction</string>
	<string name="SEFX_pitch_correct">Pitch Correction Level</string>
	<string name="SEFX_pitch_corrects_summary">Change Wet/Dry Ratio for overall effect</string>
	<string name="SEFX_pitch_correct_dialog">Sing on note.</string>
	<string name="SEFX_pitch_correct_text">Level</string>
	<string name="dialog_purchase_pitch_correct">Buy </string>
	<string name="dialog_purchase_please_try">\n\nPlease try for free first to see how well it works for you.</string>
	<string name="dialog_button_try">Try For Free</string>
	<string name="dialog_button_buy">Buy Now</string>
	<string name="dialog_you_have">You have </string>
	<string name="dialog_more_tries"> more tries</string>
	<string name="dialog_purchase_tries_exhausted1">Sorry you have no more tries.\n\nPlease purchase </string>
	<string name="dialog_purchase_tries_exhausted2"> to continue.</string>
	<string name="dialog_purchase_error">ERROR trying </string>
	<string name="standard_effects">Standard Effects</string>
	<string name="premium_effects">Premium Effects</string>
	<string name="full_version_presale">Full Version Pre-Sale</string>
	<string name="dialog_purchase_adInfinitum">\n\nFull Version Pre-Sale. Purchasing this now locks you in for all future premium effects</string>
	<string name="dialog_purchase_buy_ad_infinitum">Buy Ad Infinitum?\n\n</string>
	<string name="unable_to_connect">Unable to connect to internet.</string>
	<string name="record_effect">Video Effect</string>
	<string name="enable_tone_generator">Tone Generator</string>
	<string name="enable_tone_generator_description">Follows pitch</string>
	<string-array name="record_effect_entries">
	    <item name="video_effect_none">None</item>
	    <item name="video_effect_sorbel">Edge Highlight</item>
	    <!--  <item name="video_effect_julia">Julia Dream</item>  -->
	</string-array>
	<string-array name="record_effect_values">
	    <item name="video_effect_none">none</item>
	    <item name="video_effect_sorbel">sorbel</item>
	    <!--  <item name="video_effect_julia">julia</item> --> 
	</string-array>
	<string name="record_effect_value_default">sorbel</string>
	
	<string name="dialog_welcome_to_new_features">\nWelcome to Penelope v1.1.7\n\nNew Features\n *Special Effect:Tone Generator \n *Some bug fixes, Record still in Beta"\n\n</string>
	<string name="dialog_button_buy_mug">Rate 5 STARS!</string>
	
	<!--  From Here on out translations need to be updated -->
	<string name="dialog_penelope_full_messsage_capture">Our apologies, Recording is only supported in Android 4.3 (API_18). A work around may be to use a third party screen capture app.</string>

</resources>