<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen  xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Help">
    <Preference
        android:title="@string/tutorial"
        android:key="tutorial_key">
    	<intent android:action="android.intent.action.VIEW"
    	    android:data="http://mypromotank.com/hp/penelope/?page_id=16" />
    </Preference>
    <Preference 
        android:title="@string/about"
        android:key="about_key">
        <intent android:action="android.intent.action.VIEW"
        	android:data="http://mypromotank.com/hp/penelope" />
    </Preference>
	<Preference
        android:title="@string/report_problem"
        android:key="report_problem_key">
    	<intent android:action="android.intent.action.VIEW"
        	android:data="http://mypromotank.com/hp/penelope/?page_id=10" />
    </Preference>    
</PreferenceScreen>